src/App.css
.App {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  text-align: center;
  display: flex;
  flex-direction: column;
}

:root {
  --primary-font: 'Bungee', cursive;
  --secondary-font: 'Ubuntu Mono', monospace;
}

/* landing page */
.welcome {
  margin: 10em auto;
}
.welcome h1{
  font-family: var(--primary-font);
  font-size: 4em;
}

h3 {
  font-family: var(--secondary-font);
}

.welcome-line {
  overflow: hidden; /* Ensures the content is not revealed until the animation */
  border-right: .15em solid black; /* The typwriter cursor */
  white-space: nowrap; /* Keeps the content on a single line */
  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
  letter-spacing: .15em; /* Adjust as needed */
  animation: 
    typing 3.5s steps(28, end),
    blink-caret .75s step-end infinite;
}

/* The typing effect */
@keyframes typing {
  from { width: 0 }
  to { width: 100% }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
  from, to { border-color: transparent }
  50% { border-color: black; }
}

button {
  font-family: var(--secondary-font);
  font-size: 1.5em;
  padding: .2em .5em;
  background-color: transparent;
  border: 2px solid black;
  cursor: pointer;
  transition: all .2s;
  margin-top: 2em;
}

button:focus {
  outline: none;
}

button:hover {
  transform: translate(2px, 2px)
}

.timer-container {
    margin: 10em auto 3em;
    font-family: var(--primary-font);
}

.word-container {
  font-family: var(--secondary-font);
  font-size: 1.5em;
}

.user-input {
  width: 15em;
  padding: .5em;
  font-size: .8em;
  border: 1px solid black;
  font-family: inherit;
}

.user-input-dark {
  width: 15em;
  padding: .5em;
  font-size: .8em;
  border: 1px solid black;
  background-color: black;
  font-family: inherit;
}

.user-input:focus, .user-input-dark:focus {
  outline: none;
}

.score {
  font-family: var(--primary-font);
}

.err {
  text-align: center;
  font-family: var(--primary-font);
  margin-top: 45vh
}

.dark-switch-box {
  margin-top: 1em;
  display: flex;
  justify-content: center;
  align-items: center;
}

.dark-switch-box span {
  font-family: var(--secondary-font);
  font-weight: bold;
}

.switch {
  position: relative;
  display: inline-block;
  width: 2.5em;
  height: 1.5em;
  margin-left: 1em;
}
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #eee;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 1em;
  width: 1em;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #000;
}

input:checked + .slider:before {
  -webkit-transform: translateX(1em);
  -ms-transform: translateX(1em);
  transform: translateX(1em);
}


.welcome input {
  position: absolute;
  top: 65vh;
  left: 50vw;
  display: none;
}

.word-box {
  margin: 1em auto;
  width: 3em;
  height: 1.5em;
}

.spinner {
  margin: 1em auto;
  width: 3em;
  text-align: center;
}

.spinner > div {
  width: 18px;
  height: 18px;
  background-color: #333;

  border-radius: 100%;
  display: inline-block;
  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
}

.spinner .bounce1 {
  -webkit-animation-delay: -0.32s;
  animation-delay: -0.32s;
}

.spinner .bounce2 {
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s;
}

@-webkit-keyframes sk-bouncedelay {
  0%, 80%, 100% { -webkit-transform: scale(0) }
  40% { -webkit-transform: scale(1.0) }
}

@keyframes sk-bouncedelay {
  0%, 80%, 100% { 
    -webkit-transform: scale(0);
    transform: scale(0);
  } 40% { 
    -webkit-transform: scale(1.0);
    transform: scale(1.0);
  }
}

@media (max-width: 400px) {

  .welcome h1{
    font-size: 3em;
  }

  .welcome-line {
    font-size: 1em;
  }

  .timer-container h1 {
    font-size: 1.8em;
  }

  .user-input {
    max-width: 80vw;
  }
}

